Print user friendly error when starting Cypher Shell in unsupported jvm
Build Cypher Shell as a multi release jar. Starting with an old jvm version
prints a more user friendly error message, instead of failing with the cryptic
`Unrecognized option: --add-opens`.